name:                FairCheck
version:             1.0
synopsis:            Fair Termination Checker for Binary Sessions
homepage:            http://www.di.unito.it/~padovani/Software/FairCheck/index.html
license:             GPL-3
license-file:        LICENSE
author:              Luca Padovani
maintainer:          luca.padovani@unito.it
copyright:           (c) 2021 Luca Padovani
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md,
                     README.md,
                     examples/*.pi,
                     errors/*.pi,
                     Makefile
cabal-version:       >=1.18

executable faircheck
  main-is:           Main.hs

  other-modules:     Common,
                     Atoms,
                     Type,
                     Process,
                     Resolver,
                     Parser,
                     Lexer,
                     Formula,
                     Node,
                     Tree,
                     Relation,
                     Predicate,
                     Checker,
                     Render,
                     Exceptions
  other-extensions:  CPP

  build-depends:     base >=4.9,
                     containers >=0.5,
                     mtl >=2.2,
                     array >=0.5,
                     time >=1.5,
                     filepath >=1.4,
                     prettyprinter >=1.0,
                     prettyprinter-ansi-terminal >=1.0

  hs-source-dirs:    src
  build-tools:       alex, happy
  default-language:  Haskell2010
